# drasi-mcp-events

./: .gitignore  Cargo.toml  README.md  SPEC-GAPS.md
crates/drasi-feed/: Cargo.toml
crates/drasi-feed/src/: lib.rs  mock.rs  sse.rs
crates/mcp-events-client/: Cargo.toml
crates/mcp-events-client/src/: client.rs  dedup.rs  error.rs  lib.rs  sse.rs  state.rs
crates/mcp-events-client/tests/: client_http.rs
crates/mcp-events-engine/: Cargo.toml
crates/mcp-events-engine/src/: buffer.rs  canon.rs  lib.rs  registry.rs  store.rs
crates/mcp-events-server/: Cargo.toml
crates/mcp-events-server/examples/: drasi.yaml  mock.yaml
crates/mcp-events-server/src/: config.rs  dispatch.rs  main.rs  mapping.rs  state.rs
crates/mcp-events-server/src/handlers/: initialize.rs  list.rs  mod.rs  poll.rs  stream.rs
crates/mcp-events-server/src/webhook/: challenge.rs  handlers.rs  mod.rs  signer.rs  ssrf.rs  worker.rs
crates/mcp-events-server/tests/: integration.rs  webhook.rs
crates/mcp-events-wire/: Cargo.toml
crates/mcp-events-wire/src/: base.rs  consts.rs  events.rs  jsonrpc.rs  lib.rs  webhook.rs
crates/mcp-events-wire/tests/: serde_roundtrip.rs  webhook.rs
docs/: ARCHITECTURE.md  CONFORMANCE-NOTES.md  INTEROP.md  design-sketch-proposal.md  mcp-reference.md
drasi/: RUNBOOK.md  SSE-FORMAT.md  docker-compose.yml  seed.sql  server.yaml
