[workspace]
members = [
    "crates/mcp-events-wire",
    "crates/mcp-events-engine",
    "crates/drasi-feed",
    "crates/mcp-events-server",
    "crates/mcp-events-client",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/amansinghoriginal/drasi-mcp-events"

[workspace.dependencies]
tokio = { version = "1", features = ["full"] }
axum = { version = "0.8", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
reqwest = { version = "0.12", default-features = false, features = ["json", "stream", "rustls-tls"] }
futures = "0.3"
tokio-stream = "0.1"
async-stream = "0.3"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
thiserror = "2"
anyhow = "1"
base64 = "0.22"
hmac = "0.12"
sha2 = "0.10"
hex = "0.4"
subtle = "2"
rand = "0.8"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4"] }
clap = { version = "4", features = ["derive"] }
url = "2"
bytes = "1"

mcp-events-wire = { path = "crates/mcp-events-wire" }
mcp-events-engine = { path = "crates/mcp-events-engine" }
drasi-feed = { path = "crates/drasi-feed" }
