[package]
name = "drasi-feed"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
reqwest = { workspace = true }
anyhow = { workspace = true }
chrono = { workspace = true }
tracing = { workspace = true }
futures = { workspace = true }
bytes = { workspace = true }
rand = { workspace = true }
uuid = { workspace = true }
