[package]
name = "mcp-events-client"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
mcp-events-wire = { workspace = true }
reqwest = { workspace = true }
tokio = { workspace = true }
tokio-stream = { workspace = true }
async-stream = { workspace = true }
futures = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
clap = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
chrono = { workspace = true }
axum = { workspace = true }
base64 = { workspace = true }
rand = { workspace = true }
bytes = { workspace = true }
uuid = { workspace = true }

[[bin]]
name = "events-harness"
path = "src/bin/events-harness.rs"
