[package]
name = "mcp-events-engine"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
mcp-events-wire = { workspace = true }
serde_json = { workspace = true }
serde = { workspace = true }
tokio = { workspace = true }
chrono = { workspace = true }
thiserror = { workspace = true }
rand = { workspace = true }
sha2 = { workspace = true }
hex = { workspace = true }
tracing = { workspace = true }
